Thu Aug 18 17:59:01 2011                        Michael Jennings (mej)

I couldn't find a reasonable way to generate tainted data, and I can't
think of a way to test examine_object(), so Util.pm tests are done.
Next is Logger, then Object.
----------------------------------------------------------------------
Fri Aug 19 17:29:29 2011                        Michael Jennings (mej)

An even 1700 tests sounds like a good stopping point for the weekend.
Logger tests are done, now working on Object tests.
----------------------------------------------------------------------
Fri Aug 26 18:08:03 2011                        Michael Jennings (mej)

Object tests are finally done.  I think I've got full coverage now,
and several bugs were fixed that hadn't appeared yet.  Now at 1774
tests.
----------------------------------------------------------------------
Mon Dec 19 11:55:07 2011                        Michael Jennings (mej)

We're trying out a new concept for calling conventions:  A RetVal
object that handles both normal return values and error returns
(a.k.a. Exceptions).
----------------------------------------------------------------------
Mon Dec 19 16:33:15 2011                        Michael Jennings (mej)

Fix POD formatting for =cut directive.
----------------------------------------------------------------------
Wed Dec 21 15:36:09 2011                        Michael Jennings (mej)

Created a single unified wrapper for object properties (i.e., object
member variables and the accessor methods that go with them).
----------------------------------------------------------------------
Thu Dec 22 11:20:14 2011                        Michael Jennings (mej)

Minor syntax fix for =cut.
----------------------------------------------------------------------
Thu Dec 22 14:12:34 2011                        Michael Jennings (mej)

Add static method for retrieving last RetVal.
----------------------------------------------------------------------