@@ -11,6 +11,7 @@
 package Warewulf::Object;
 
 use Warewulf::Logger;
+use Warewulf::Util;
 
 our @ISA = ();
 
@@ -308,21 +309,17 @@ del()
 
 Wrapper for object properties (member variables that have matching
 combined getter/setter methods).  The I<key> is the member name.
-I<value> is a reference to a scalar value or an array of values.  If
-I<value> is not present, the current value(s) for the I<key> member
-are returned.  If I<value> is a valid reference to a scalar, but that
-scalar has an undefined value, the I<key> member will be deleted.
-Likewise, if I<value> is a reference to an empty array, the I<key>
-member will be deleted.  (This is consistent with the behavior of the
-C<del()> method.)
+I<value> is the new value to assign.  If I<value> is undefined, the
+I<key> member will be deleted.  (This is consistent with the behavior
+of the C<set()> and C<del()> methods.)
 
 The optional validator is a reference to a regular expression
-(supplied via qr/.../) or a coderef.  Each value must match the regex
-(or the coderef must return true); otherwise, the entire set operation
-is aborted.  If a regex is used, the first parenthesized subgroup must
-refer to the final value for the member (for untainting purposes).  If
-a coderef is used, the return value of the subroutine must be the
-validated value or undef (if the value is invalid).
+(supplied via qr/.../) or a coderef.  I<value> must match the regex
+(or the coderef must return a defined value); otherwise, the set
+operation is aborted.  If a regex is used, the first parenthesized
+subgroup must refer to the final value for the member (for untainting
+purposes).  If a coderef is used, the return value of the subroutine
+must be the validated value or undef (if the value is invalid).
 
 C<prop()> returns the current (possibly new) value of the member in
 all cases.
@@ -331,15 +328,20 @@ Generally speaking, this method should be used to create the combined
 getter/setter method like so:
 
     sub
-    membervar()
+    membervar
     {
-        my ($self, $value) = @_;
-
-        if ($value eq "UNDEF") {
-            $value = undef;
-        }
-        return $self->prop("membervar", ((scalar(@_) == 1) ? (undef) : (\$value)), qr/^(\w+)$/);
+        return (
+                (scalar(@_) > 1)
+                ? ($_[0]->prop("membervar", $_[1], qr/^(\w+)$/))
+                : ($_[0]->prop("membervar"))
+               );
     }
+
+(Spacing added for readability.)
+
+If no validator is required, a single-line wrapper is possible:
+
+    sub membervar {return $_[0]->prop("membervar", @_[1..$#_]);}
 
 =cut
 
@@ -348,10 +350,10 @@ prop()
 {
     my ($self, $key, $val, $validator) = @_;
 
-    if (!defined($key)) {
+    if ((scalar(@_) <= 1) || !defined($key)) {
         return undef;
     }
-    if (defined($val) && ref($val)) {
+    if (scalar(@_) > 2) {
         my $name;
 
         $name = $self->get("name") || "??UNKNOWN??";
@@ -373,39 +375,20 @@ prop()
         } else {
             $validator = sub { return $_[0]; };
         }
-        if ((ref($val) eq "SCALAR") || (ref($val) eq "REF")) {
-            if (defined(${$val})) {
-                $val = &{$validator}(${$val});
-                if (defined($val)) {
-                    &dprint("Object $name set $key = '$val'\n");
-                    $self->{$key} = $val;
-                }
+        if (defined($val)) {
+            $val = &{$validator}($val);
+            if (defined($val)) {
+                &dprint("Object $name set $key = '$val'\n");
+                $self->set($key, $val);
             } else {
-                &dprint("Object $name delete $key\n");
-                delete $self->{$key};
+                &dprint("Object $name set $key = '$_[2]' REFUSED\n");
             }
-        } elsif (ref($val) eq "ARRAY") {
-            if (scalar(@{$val})) {
-                my @newvals;
-
-                foreach my $newval (@{$val}) {
-                    $newval = &{$validator}($newval);
-                    if (defined($newval)) {
-                        push @newvals, $newval;
-                    } else {
-                        last;
-                    }
-                }
-                if (scalar(@newvals) == scalar(@{$val})) {
-                    @{$self->{$key}} = @newvals;
-                }
-            } else {
-                &dprint("Object $name delete $key\n");
-                delete $self->{$key};
-            }
+        } else {
+            &dprint("Object $name delete $key\n");
+            $self->set($key, undef);
         }
     }
-    return ((exists($self->{$key})) ? ($self->{$key}) : (undef));
+    return $self->get($key);
 }
 
 =item get_hash()
